<resources>
    <string name="app_name">StockPiler</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="alert">Alert</string>
    <string name="inventory">Inventory</string>
    <string name="purchase">Purchase</string>
    <string name="sales">Sales</string>
    <string name="logout">LOGOUT</string>
    <string name="logo">logo</string>
    <string name="description">DESCRIPTION</string>
    <string name="qty">QTY</string>
    <string name="category">CATEGORY</string>
    <string name="itemName">ITEM NAME</string>
    <string name="id">PRODUCT ID</string>
    <string name="costprice">COST PRICE</string>
    <string name="sellingprice">SELLING PRICE</string>
    <string name="clear">CLEAR</string>
    <string name="add">ADD</string>
    <string name="addqty">+</string>
    <string name="subqty">-</string>

    <string-array name="categories">
        <item>Fruit &amp; Vegetables</item>
        <item>Grains &amp; Pulses</item>
        <item>Spices &amp; Condiments</item>
        <item>Bakery</item>
        <item>Cosmetics</item>
        <item>Stationary</item>
        <item>Electronics</item>
        <item>HouseHold</item>
        <item>Others</item>
    </string-array>
    <string name="total">TOTAL</string>
    <string name="remove">REMOVE</string>
    <string name="checkout">CHECKOUT</string>
    <string name="profit">PROFIT</string>
    <string name="inventory_value">INVENTORY VALUE</string>
    <string name="salesqty">SALES QTY</string>
    <string name="inventoryqty">INVENTORY QTY</string>

</resources>