<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/ic_alert"
            android:title="@string/alert" />
    </group>
    <item android:title="@string/inventory">
        <menu>
            <item
                android:id="@+id/nav_purchase"
                android:icon="@drawable/ic_inventory"
                android:title="@string/purchase" />
            <item
                android:id="@+id/nav_sales"
                android:icon="@drawable/ic_inventory"
                android:title="@string/sales" />
        </menu>
    </item>

</menu>