<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".inventoryInfo">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <AutoCompleteTextView
        android:id="@+id/slugid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:completionThreshold="0"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/textcolor"
        android:textStyle="bold"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/itemName"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textColor="@color/white"
        android:textColorHint="@color/textcolor"
        android:textStyle="bold"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slugid"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/qty"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textColor="@color/white"
        android:textColorHint="@color/textcolor"
        android:textStyle="bold"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/costprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/costprice"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textColor="@color/white"
        android:textColorHint="@color/textcolor"
        android:textStyle="bold"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        tools:ignore="Deprecated" />


    <EditText
        android:id="@+id/sellingprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/sellingprice"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textColor="@color/white"
        android:textColorHint="@color/textcolor"
        android:textStyle="bold"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costprice"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textColor="@color/white"
        android:textColorHint="@color/textcolor"
        android:textStyle="bold"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category"
        tools:ignore="Deprecated" />

    <AutoCompleteTextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:completionThreshold="0"
        android:ems="10"
        android:hint="@string/category"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/textcolor"
        android:textStyle="bold"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/slugidview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/id"
        android:textColor="#717171"
        app:layout_constraintBaseline_toBaselineOf="@+id/slugid"
        app:layout_constraintEnd_toStartOf="@+id/slugid"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/itemnameview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/itemName"
        android:textColor="#717171"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemName"
        app:layout_constraintEnd_toStartOf="@+id/itemName"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/categoryview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="#717171"
        app:layout_constraintBaseline_toBaselineOf="@+id/category"
        app:layout_constraintEnd_toStartOf="@+id/category"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="#717171"
        app:layout_constraintBaseline_toBaselineOf="@+id/description"
        app:layout_constraintEnd_toStartOf="@+id/description"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/qtyview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/qty"
        android:textColor="#717171"
        app:layout_constraintBaseline_toBaselineOf="@+id/quantity"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sellingpriceview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/sellingprice"
        android:textColor="#717171"
        app:layout_constraintBaseline_toBaselineOf="@+id/sellingprice"
        app:layout_constraintEnd_toStartOf="@+id/sellingprice"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/costpriceview"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/costprice"
        android:textColor="#717171"
        app:layout_constraintBaseline_toBaselineOf="@+id/costprice"
        app:layout_constraintEnd_toStartOf="@+id/costprice"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>