<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="110dp">

    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="#2E2E2E"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itemname"
                android:layout_width="129dp"
                android:layout_height="32dp"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.262" />

            <TextView
                android:id="@+id/qty"
                android:layout_width="43dp"
                android:layout_height="18dp"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemname" />

            <Button
                android:id="@+id/qtyadd"
                android:layout_width="26dp"
                android:layout_height="33dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/addqty"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/qty"
                app:layout_constraintTop_toBottomOf="@+id/itemname"
                app:layout_constraintVertical_bias="0.411" />

            <Button
                android:id="@+id/qtysub"
                android:layout_width="25dp"
                android:layout_height="36dp"
                android:background="@android:color/transparent"
                android:gravity="bottom|center|center_horizontal"
                android:paddingBottom="0dp"
                android:text="@string/subqty"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/qty"
                app:layout_constraintTop_toBottomOf="@+id/itemname" />

            <TextView
                android:id="@+id/totalamt"
                android:layout_width="83dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.158"
                app:layout_constraintStart_toEndOf="@+id/qtyadd"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:text="@string/remove"
                android:textColor="#D50000"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>